# genrecai-client

./: README.md  pyproject.toml
src/genrecai/: __init__.py
