[project]
name = "genrecai"
version = "0.1.0"
description = "Python client for GenrecAI API - Access powerful LLM and embedding models"
authors = [
    {name = "GenreCAI Team", email = "ai.genrec@gmail.com"},
]
keywords = ["ai", "llm", "embeddings", "machine-learning", "nlp"]
license = {text = "Closed Source"}
classifiers = [
    "Development Status :: 4 - Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/GenrecAI/genrecai-client"
Documentation = "https://github.com/GenrecAI/genrecai-client#readme"

[project.scripts]
genrecai = "genrecai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
